# univ-4-1-newai-ars

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
docs/: 00_project_overview.md  01_architecture.md  02_requirements.md  03_api_spec.md  04_data_model.md  05_phase_plan.md  06_provider_strategy.md  07_test_strategy.md  08_telephony_gateway_design.md  09_presentation.md  10_user_manual.md
log-done/: 2026-05-26_done_phase-0-bootstrap.md  2026-05-26_done_phase-1-orchestrator-text-mock-flow.md  2026-05-26_done_phase-2-provider-router-structured-output.md  2026-05-26_done_phase-3-stt-tts-services.md  2026-05-26_done_phase-4-discord-bot-text-mode.md  2026-05-27_done_discord-runtime-service-control.md  2026-05-27_done_phase-5-discord-voice-mvp.md  2026-05-27_done_phase-6-stats-dashboard-reports.md  2026-05-27_done_phase-7-hardening-privacy.md  2026-05-27_done_real-provider-enablement.md  2026-05-27_done_runtime-smoke-validation.md  2026-06-14_done_phase-10-discord-voice-receive.md  2026-06-14_done_phase-9-piper-korean-tts.md  2026-06-15_done_runtime-smoke-all-phases.md  2026-06-16_done_dashboard-and-voice-timeout.md
log-report/: 2026-05-26_phase-0_repository-bootstrap.md  2026-05-26_phase-1_orchestrator-text-mock-flow.md  2026-05-26_phase-2_provider-router-structured-output.md  2026-05-26_phase-3_stt-tts-services.md  2026-05-26_phase-4_discord-bot-text-mode.md  2026-05-27_phase-5_discord-voice-mvp.md  2026-05-27_phase-6_stats-dashboard-reports.md  2026-05-27_phase-7_hardening-privacy.md  2026-05-27_phase-8_real-provider-enablement.md  2026-05-27_runtime-smoke-validation.md  2026-06-14_phase-10_discord-voice-receive.md  2026-06-14_phase-9_piper-korean-tts.md  2026-06-15_runtime-smoke-all-phases.md  2026-06-16_dashboard-multipage-reconstruction.md  2026-06-16_dashboard-opinion-insights.md  2026-06-16_fix-free-text-retry-loop.md  2026-06-16_gpt-sovits-server-live.md  (+7 more)
rules/: coding_convention.md  (+4 more)
services/ai-orchestrator/: Dockerfile  pyproject.toml
services/ai-orchestrator/app/: __init__.py  main.py  models.py  survey_loader.py
services/ai-orchestrator/app/agents/: __init__.py  answer_analyzer.py
services/ai-orchestrator/app/core/: privacy.py  settings.py
services/ai-orchestrator/app/db/: schema.sql
services/ai-orchestrator/app/providers/: llm.py  llm_router.py  mock.py  speech.py
services/ai-orchestrator/app/repositories/: base.py  factory.py  memory.py  postgres.py
services/ai-orchestrator/app/services/: orchestrator.py  report_exporter.py
services/ai-orchestrator/tests/: conftest.py  test_api_flow.py  test_mock_agent.py  test_no_speech.py  test_privacy_hardening.py  test_provider_router.py  test_retry_policy.py  test_speech_service_clients.py  test_stats_reports.py  test_survey_loader.py
services/dashboard/: Dockerfile  pyproject.toml
services/dashboard/app/: __init__.py  main.py
services/dashboard/tests/: test_dashboard.py
services/discord-bot/: Dockerfile  pyproject.toml
services/discord-bot/app/: __init__.py  main.py  orchestrator_client.py  settings.py  text_flow.py  voice_flow.py  voice_recorder.py
services/discord-bot/tests/: test_orchestrator_client.py  test_settings.py  test_text_flow.py  test_voice_flow.py  test_voice_recorder.py
services/stt-service/: Dockerfile  pyproject.toml
services/stt-service/app/: main.py
services/stt-service/tests/: test_stt_service.py
services/telephony-gateway/: Dockerfile  pyproject.toml
services/telephony-gateway/app/: main.py  orchestrator_client.py
services/telephony-gateway/tests/: test_telephony.py
services/tts-service/: Dockerfile  pyproject.toml
services/tts-service/app/: main.py
services/tts-service/tests/: test_tts_service.py
(+9 files in other folders)
