[project]
name = "ars-telephony-gateway"
version = "0.1.0"
description = "Twilio Programmable Voice gateway that runs the ARS survey over a real phone call"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "uvicorn[standard]>=0.30.0",
    # Twilio posts form-encoded webhooks; FastAPI Form(...) needs python-multipart.
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
