[project]
name = "tts-service"
version = "0.1.0"
description = "Cached/mock TTS service for Discord ARS survey flows"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "uvicorn[standard]>=0.30.0",
    "piper-tts>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
